%% sources of file: invenio_notify/records/models.py

erDiagram
    User ||--o{ NotifyInboxModel : has
    User ||--o{ ActorMapModel : has
    User ||--o{ EndorsementRequestModel : creates
    
    ActorModel ||--o{ ActorMapModel : has
    ActorModel ||--o{ EndorsementModel : creates
    ActorModel ||--o{ EndorsementRequestModel : receives
    
    RDMRecordMetadata ||--o{ EndorsementModel : has
    RDMRecordMetadata ||--o{ EndorsementRequestModel : has
    
    NotifyInboxModel ||--|| EndorsementModel : references
    NotifyInboxModel ||--|| EndorsementReplyModel : references
    
    EndorsementRequestModel ||--o{ EndorsementReplyModel : has
    EndorsementReplyModel ||--o| EndorsementModel : references
    
    User {
        int id PK
        string email
        string name
        timestamp created
        timestamp updated
    }
    
    NotifyInboxModel {
        int id PK
        uuid notification_id UK
        json raw
        text record_id
        datetime process_date
        text process_note
        int user_id FK
        timestamp created
        timestamp updated
    }
    
    ActorMapModel {
        int id PK
        int user_id FK
        int actor_id FK
        timestamp created
        timestamp updated
    }
    
    ActorModel {
        int id PK
        text name
        text actor_id
        text inbox_url
        text inbox_api_token
        text description
        timestamp created
        timestamp updated
    }
    
    EndorsementModel {
        int id PK
        uuid record_id FK
        int actor_id FK
        text review_type
        int inbox_id FK
        text result_url
        text actor_name
        int endorsement_reply_id FK
        timestamp created
        timestamp updated
    }
    
    EndorsementRequestModel {
        int id PK
        uuid notification_id UK
        uuid record_id FK
        int user_id FK
        int actor_id FK
        json raw
        text latest_status
        timestamp created
        timestamp updated
    }
    
    EndorsementReplyModel {
        int id PK
        int endorsement_request_id FK
        int inbox_id FK
        text status
        text message
        timestamp created
        timestamp updated
    }
    
    RDMRecordMetadata {
        uuid id PK
        text title
    }
